--- a/posts/Ethereum.mdx
+++ b/posts/Ethereum.mdx
@@ -1,5 +1,5 @@
 ---
-title: Coin Analysis: Ethereum
+title: "Coin Analysis - Ethereum"
 description: "Ethereum is one of the most important cryptocurrencies in the world, second only to Bitcoin in market capitalization. It was created in 2015 by Vitalik Buterin, who sought to build a decentralized platform for smart contracts and decentralized applications (DApps). Since then, Ethereum has grown into a massive ecosystem that includes everything from decentralized finance (DeFi) to non-fungible tokens (NFTs)."
 date: March 24 2023
 ---
